syntax = "proto2";

package stremio.core.deeplinks;

option java_package = "com.stremio.core.deeplinks";

message DiscoverDeepLinks {
  required string discover = 1;
}

message LibraryDeepLinks {
  required string library = 1;
}